--- a/product.html
+++ b/product.html
@@ -12,14 +12,14 @@
     <nav class="navbar">
         <div class="navdiv">
             <div class="logo">
-                <a href="webpage.html" class="logo-link">
+                <a href="index.html" class="logo-link">
                     <h1>
                         <img src="logo.jpg" style="vertical-align: middle; height: 80px; padding: 10px;  border-radius: 50px;">
                     </h1>
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="webpage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="product.html" class="active">Products</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="form.html">Login</a></li>
