--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <nav class="navbar">
         <div class="navdiv">
             <div class="logo">
-                <a href="webpage.html" class="logo-link">
+                <a href="index.html" class="logo-link">
                     <h1>
                         <img src="logo.jpg" alt="BookWorm Logo" class="logo-img">
                     </h1>
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="webpage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="product.html">Products</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="form.html">Login</a></li>
