--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BookWorm</title>
+    <title>SPM Stores</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -11,21 +11,19 @@
 <body>
     <!-- Navbar Section -->
     <nav class="navbar">
-        <div class="navdiv">
+        <div class="navdiv container">
             <div class="logo">
                 <a href="index.html" class="logo-link">
-                    <h1>
-                        <img src="logo.jpg" alt="BookWorm Logo" class="logo-img">
-                    </h1>
+                    <img src="logo.jpg" alt="BookWorm Logo" class="logo-img">
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="product.html">Products</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="form.html">Login</a></li>
                 <li>
-                    <a href="cart.html" title="Cart">
+                    <a href="cart.html" title="Cart" class="cart-link">
                         <i class="fas fa-shopping-cart cart-icon"></i>
                     </a>
                 </li>
@@ -33,31 +31,33 @@
         </div>
     </nav>
 
+    <!-- Hero Section -->
+    <section class="hero">
+        <img src="notebook.png" alt="Featured Notebook" class="hero-image">
+    </section>
+
     <!-- Main Content Section -->
-    <section class="main-section">
-        <h2>OUR PREMIUM PRODUCTS</h2>
+    <section class="main-section container">
+        <h2 class="section-title">Our Premium Products</h2>
         <div class="slider">
             <div class="slide-track">
-                <div class="slide"><img src="faber-castell.svg" alt="Logo 1" /></div>
-                <div class="slide"><img src="Kokuyo_Camlin_logo.svg" alt="Logo 2" width="200"/></div>
-                <div class="slide"><img src="itc-classmate-vector-logo.png" alt="Logo 3"width="200" /></div>
-                <div class="slide"><img src="youva.jpg" alt="Logo 4" /></div>
-                <div class="slide"><img src="images.png" alt="Logo 5" /></div>
-                <div class="slide"><img src="itc-classmate-vector-logo.png" alt="Logo 6" width="200"/></div>
-                <div class="slide"><img src="Kokuyo_Camlin_logo.svg" alt="Logo 7" width="200"/></div>
-                <div class="slide"><img src="VRvFLheL_400x400.jpg" alt="Logo 8" /></div>
-                <div class="slide"><img src="faber-castell.svg" alt="Logo 9" /></div>
-                <div class="slide"><img src="images.png" alt="Logo 10" /></div>
+                <div class="slide"><img src="faber-castell.svg" alt="Faber Castell" /></div>
+                <div class="slide"><img src="Kokuyo_Camlin_logo.svg" alt="Kokuyo Camlin" width="200"/></div>
+                <div class="slide"><img src="itc-classmate-vector-logo.png" alt="Classmate" width="200" /></div>
+                <div class="slide"><img src="youva.jpg" alt="Youva" /></div>
+                <div class="slide"><img src="images.png" alt="Brand Logo" /></div>
+                <div class="slide"><img src="itc-classmate-vector-logo.png" alt="Classmate" width="200"/></div>
+                <div class="slide"><img src="Kokuyo_Camlin_logo.svg" alt="Kokuyo Camlin" width="200"/></div>
+                <div class="slide"><img src="VRvFLheL_400x400.jpg" alt="Brand Logo" /></div>
+                <div class="slide"><img src="faber-castell.svg" alt="Faber Castell" /></div>
+                <div class="slide"><img src="images.png" alt="Brand Logo" /></div>
             </div>
         </div>
     </section>
 
-    <img src="notebook.png">
-
-
     <!-- Footer Section -->
     <footer class="footer">
-        <div class="footer-container">
+        <div class="footer-container container">
             <div class="footer-section">
                 <h3>Contact Us</h3>
                 <p><i class="fas fa-phone"></i> +91 9600 900503</p>
@@ -65,22 +65,20 @@
             </div>
             <div class="footer-section">
                 <h3>Visit Us</h3>
-                <p><i class="fas fa-map-marker-alt"></i> No 29 Main Market, Anderson Street, George Town, Chennai - 600001 (Near By Broadway Stop)</p>
+                <p><i class="fas fa-map-marker-alt"></i> No 29 Main Market, Anderson Street</p>
                 <p><a href="https://goo.gl/maps/example" target="_blank">View on Google Maps</a></p>
             </div>
-            <div class="footer-section">
+            <div class="footer-section social-links">
                 <h3>Follow Us</h3>
-                <div class="social-links">
-                    <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                <div class="social-icons">
+                    <a href="https://facebook.com" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://instagram.com" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>© 2025 SPM . All rights reserved.</p>
+            <p>&copy; 2025 SPM. All rights reserved.</p>
         </div>
     </footer>
 </body>
 </html>
-  
-
