--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="footer-section">
                 <h3>Visit Us</h3>
                 <p><i class="fas fa-map-marker-alt"></i> No 29 Main Market, Anderson Street</p>
-                <p><a href="https://goo.gl/maps/example" target="_blank">View on Google Maps</a></p>
+                <p><a href="https://maps.app.goo.gl/xoUHPZdwXVRZQBzM9" target="_blank">View on Google Maps</a></p>
             </div>
             <div class="footer-section social-links">
                 <h3>Follow Us</h3>
